Se termina CSS con ajustes en el index

--- a/style.css
+++ b/style.css
@@ -7,11 +7,20 @@ body {
 
 body{
     font-family: Roboto, sans-serif;
-    padding: 0 300px 0 300px;
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    align-content: center;
+}
+
+.header,
+.contenedor1,
+.contenedor2,
+.contenedor3,
+.contenedor4,
+.footer {
+    width: 1000px;
+    align-self: center;
 }
 
 .logo {
@@ -29,39 +38,136 @@ ul {
   }
 
 a {
-    color: #4F9D69;
+    color: #eee;
     text-decoration: none;
 }
 
 .header {
     margin: 0 -9999rem;
     padding: 0.25rem 9999rem;
-    background-color: #BEE6CE;
+    background-color: #3D315B;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    color: #4F9D69;
+    color: white;
 }
 
 .contenedor1 {
     margin: 0 -9999rem;
-    padding: 0.25rem 9999rem;
-    background-color: #BEE6CE;
-    color: #4F9D69;
+    padding: 50px 9999rem;
+    gap: 30px;
+    background-color: #3D315B;
+    color: white;
     display: flex;
+    justify-content: space-between;
+}
+
+.contenedor1 .izquierda {
+    display:flex;
+    align-items: center;
 }
 
 button {
     font-family: Roboto, sans-serif;
     border: none;
     border-radius: 8px;
-    background: #eee;
+    border: 1px solid #FFF;
+    background: #F87060;
+    font-weight: bold;
     padding: 10px;
-    color: #4F9D69;
+    color: #FFF;
   }
 
-  img {
+.contenedor1 .izquierda img {
     object-fit: cover;
-    width: 500px;
+    width: 400px;
     height: 200px;
+}
+
+.contenedor2 .fotoydescripcion img {
+    object-fit: cover;
+    width: 200px;
+    height: 200px;
+    border-radius: 0 30px;
+    border: 3px solid #3D315B;
+}
+
+.contenedor2 {
+    margin: 0 -9999rem;
+    padding: 0 9999rem;
+    background-color: white;
+    color: #3D315B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+}
+
+.fotos {
+    display: flex;
+    gap: 20px;
+}
+
+.fotoydescripcion {
+    width: 200px;
+    text-align: center;
+
+}
+
+.contenedor3 {
+    margin: 0 -9999rem;
+    padding: 50px 9999rem;
+    background-color: #C9CEBD;
+    color: #3D315B;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.testimonio {
+    font-size: x-large;
+    font-style: italic;
+    width: 700px;
+}
+
+.firma {
+    font-size: medium;
+    font-weight: bold;
+    text-align: right;
+    width: 700px;
+}
+
+.contenedor4 {
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.caja {
+    background-color: #F87060;
+    width: 1000px;
+    border-radius: 20px;
+    padding: 40px 40px;
+    gap: 30px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+h3,
+.contenedor3 .testimonio,
+.contenedor3 .firma, 
+.contenedor4 .caja .derecha p{
+    margin: 0;
+}
+
+.footer{
+    text-align: center;
+    background-color: #3D315B;
+    color: #FFF;
+    margin: 0 -9999rem;
+    padding: 0 9999rem;
 }
